# SOAContainer

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README  README.md  newfields.cc
doc/: SOAContainer.eps
examples/: CMakeLists.txt  Points.cc  PointsWithConstructor.cc  SmallVectorPoints.cc  compare_on_clang.cc  tutorial00.cc
examples/nbody/: CMakeLists.txt  MPoint.h  MPointSOA.h  NBody.h  benchmark.cc  guitest.cc
include/: AlignedAllocator.h  Branchless.h  PrintableNullSkin.h  SOAAlgorithms.h  SOAContainer.h  SOADressedTuple.h  SOAField.h  SOAIterator.h  SOAIteratorRange.h  SOAObjectProxy.h  SOASkin.h  SOATaggedType.h  SOATuplePrinter.h  SOATypePrinter.h  SOATypelist.h  SOATypelistUtils.h  SOAUtils.h  SOAView.h  c++14_compat.h  stack_allocator.h
include/util/: static_string.h  static_typename.h
tests/: Branchless.cc  CMakeLists.txt  EmplaceBackTest.cc  SOAAlgorithms.cc  SOAContainer.cc  SOAContainerArrayAsField.cc  SOAContainerDequeSimple.cc  SOAContainerDequeSimpleSkin.cc  SOAContainerExample.cc  SOAContainerTest.cc  SOAContainerVectorConvenientSkin.cc  SOAContainerVectorEmplaceBack.cc  SOAContainerVectorFieldExtraction.cc  SOAContainerVectorPartition.cc  SOAContainerVectorSimple.cc  SOAContainerVectorSimpleSkin.cc  SOAContainerVectorZipViews.cc  SOAIteratorRangeTest.cc  SOATaggedType.cc  SOAViewSimple.cc  SOAZipTestOlli.cc  SOAZipTestPaul.cc
tutorial/: faq-4.md  future-3.md  internals-5.1.md  internals-5.2.md  internals-5.3.md  intro-1.1.md  intro-1.2.md  intro-1.3.md  intro-1.4.md  intro-1.5.md  tutorial.md  viewzip-2.1.md  viewzip-2.2.md  viewzip-2.3.md
